--- a/backend/requirements.dev.txt
+++ b/backend/requirements.dev.txt
@@ -6,6 +6,7 @@ certifi==2022.9.24
 click==8.1.3
 coverage==6.5.0
 fastapi==0.85.1
+gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
@@ -28,5 +29,5 @@ rfc3986==1.5.0
 sniffio==1.3.0
 starlette==0.20.4
 tomli==2.0.1
-typing_extensions==4.4.0
+typing-extensions==4.4.0
 uvicorn==0.18.3
