--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,33 @@
 anyio==3.6.2
+arrow==1.2.3
 asyncpg==0.26.0
+binaryornot==0.4.4
+certifi==2022.9.24
+chardet==5.0.0
+charset-normalizer==2.1.1
 click==8.1.3
+cookiecutter==2.1.1
+docker==6.0.0
+docker-auto-labels==0.2.3
 fastapi==0.85.1
+gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
+Jinja2==3.1.2
+jinja2-time==0.2.0
+MarkupSafe==2.1.1
+packaging==21.3
 pydantic==1.10.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-slugify==6.1.2
+PyYAML==6.0
+requests==2.28.1
+six==1.16.0
 sniffio==1.3.0
 starlette==0.20.4
-typing_extensions==4.4.0
+text-unidecode==1.3
+typing-extensions==4.4.0
+urllib3==1.26.12
 uvicorn==0.18.3
+websocket-client==1.4.1
