--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,18 @@
 BASE_CLIENT_URL=http://backend
 
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=<changethis>
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 POSTGRES_DB=ciplay_stats
 
 INSTALL_DEV=true
+
+
+# use for prod in docker stack
+DOMAIN=
+STACK_NAME=
+TRAEFIK_PUBLIC_NETWORK=traefik-public
+TRAEFIK_TAG=
+TRAEFIK_PUBLIC_TAG=traefik-public
+
