transfer to alpine

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,16 +58,15 @@ services:
         # to disable www redirection remove the section: ${STACK_NAME?Variable not set}-www-redirect,
         - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-http.middlewares=${STACK_NAME?Variable not set}-www-redirect,${STACK_NAME?Variable not set}-https-redirect
 
-
   db:
-    image: postgres:14
+    image: postgres:14.3-alpine
     volumes:
       - pg-data:/var/lib/postgresql/data
     env_file:
       - .env
-          
+
   backend:
-    image: ciplay-task-backend:latest
+    image: plots418890/ciplay-task-backend:latest
     depends_on:
       - db
     env_file:
@@ -77,7 +76,12 @@ services:
       args:
         INSTALL_DEV: ${INSTALL_DEV-false}
     deploy:
-            replicas: 3    
+      labels:
+        - traefik.enable=true
+        - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
+        - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`)
+        - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
+
 volumes:
   pg-data:
 
@@ -85,3 +89,4 @@ networks:
   traefik-public:
     # Allow setting it to false for testing
     external: ${TRAEFIK_PUBLIC_NETWORK_IS_EXTERNAL-true}
+
