--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - 8000
     volumes:
-      - ./backend/app:/usr/src/app
+      - ./backend/app:/usr/src/ciplay-task/
     labels:
       - traefik.enable=true
       - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
