--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -4,7 +4,7 @@ services:
     ports:
       - 5432:5432
   backend:
-    command: ./scripts/start-reload.sh
+    command: ${PYTHONPATH}/scripts/start-reload.sh
     ports:
       - 8000
     volumes:
