--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -4,11 +4,11 @@ services:
     ports:
       - 5432:5432
   backend:
-    command: ${PYTHONPATH}/scripts/start-reload.sh
+    command: ./scripts/start-reload.sh
     ports:
       - 8000
     volumes:
-      - ./backend/app:/usr/src/ciplay-task/
+      - ./backend/:/usr/src/ciplay-task/
     labels:
       - traefik.enable=true
       - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
